--- a/Panda-2/src/app/perfil/perfil.page.scss
+++ b/Panda-2/src/app/perfil/perfil.page.scss
@@ -28,3 +28,14 @@
   display: flex;
   justify-content: center;
 }
+
+.no-imagenes {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.mensaje {
+  font-size: 18px; 
+}
