--- a/Panda-2/src/app/login/login.page.html
+++ b/Panda-2/src/app/login/login.page.html
@@ -5,6 +5,9 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" class="ion-text-center">
+  <div style="width: 260px; padding: 10px; right: 0; left: 0; margin: 0 auto;">
+  <ion-img src="assets/logo.png" ></ion-img>
+  </div>
   <ion-grid>
     <ion-row class="ion-justify-content-center ion-align-items-center">
       <ion-col size-md="6" size-lg="4">
