--- a/Panda-2/src/app/perfil/perfil.page.html
+++ b/Panda-2/src/app/perfil/perfil.page.html
@@ -27,7 +27,7 @@
 
     <mat-card-content class="profile-details" *ngIf="usuarioIdPerfil === (idUsuario | number)">
       <ion-button color="primary">Modificar Foto</ion-button>
-      <ion-button color="primary" [routerLink]="['perfil/editar-perfil']">Modificar Perfil</ion-button>
+      <ion-button color="primary" [routerLink]="['editar-perfil', idUsuario]">Modificar Perfil</ion-button>
     </mat-card-content>
 
   </ion-card>
@@ -35,19 +35,29 @@
 
   <ion-grid class="custom-grid">
     <ion-row>
-      <ion-col size="6" *ngFor="let imagen of imagenes" >
 
-        <mat-card>
-          <a [routerLink]="['/tabs/imagenes', imagen.id]">
-            <img mat-card-image alt="" [src]="imagen.imagen">
-          </a>
-          <mat-card-header class="custom-card-header">
-            <mat-card-title>{{ imagen.titulo }}</mat-card-title>
-            <mat-card-subtitle>{{ imagen.fecha_publicacion | date:'M/d/yy' }}</mat-card-subtitle>
-          </mat-card-header>
-        </mat-card>
-        
+      <ion-col size="6" *ngIf="imagenes?.length > 0; else noImagenes">
+        <ng-container *ngFor="let imagen of imagenes">
+          <mat-card>
+            <a [routerLink]="['/tabs/imagenes', imagen.id]">
+              <img mat-card-image alt="" [src]="imagen.imagen">
+            </a>
+            <mat-card-header class="custom-card-header">
+              <mat-card-title>{{ imagen.titulo }}</mat-card-title>
+              <mat-card-subtitle>{{ imagen.fecha_publicacion | date:'M/d/yy' }}</mat-card-subtitle>
+            </mat-card-header>
+          </mat-card>
+        </ng-container>
       </ion-col>
+      
+      <ng-template #noImagenes>
+        <ion-col size="12" class="no-imagenes">
+          <p class="mensaje">Cuando compartas fotos, aparecerán en tu perfil.</p>
+        </ion-col>
+      </ng-template>
+      
+      
+
     </ion-row>
   </ion-grid>
 
