--- a/Panda-2/src/app/perfil/editar-perfil/editar-perfil.page.html
+++ b/Panda-2/src/app/perfil/editar-perfil/editar-perfil.page.html
@@ -1,5 +1,10 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="perfil/usuario.id"></ion-back-button>
+    </ion-buttons>
+
     <ion-title>Editar perfil</ion-title>
   </ion-toolbar>
 </ion-header>
