--- a/Panda-2/src/app/perfil/perfil.page.html
+++ b/Panda-2/src/app/perfil/perfil.page.html
@@ -40,9 +40,9 @@
 
   <ion-grid class="custom-grid">
     <ion-row>
-
-      <ion-col size="6" *ngIf="imagenes?.length > 0; else noImagenes">
-        <ng-container *ngFor="let imagen of imagenes">
+  
+      <ng-container *ngIf="imagenes?.length > 0; else noImagenes">
+        <ion-col size="6" *ngFor="let imagen of imagenes">
           <mat-card>
             <a [routerLink]="['/tabs/imagenes', imagen.id]">
               <img mat-card-image alt="" [src]="imagen.imagen">
@@ -52,19 +52,18 @@
               <mat-card-subtitle>{{ imagen.fecha_publicacion | date:'M/d/yy' }}</mat-card-subtitle>
             </mat-card-header>
           </mat-card>
-        </ng-container>
-      </ion-col>
-      
+        </ion-col>
+      </ng-container>
+  
       <ng-template #noImagenes>
         <ion-col size="12" class="no-imagenes">
           <p class="mensaje">Cuando compartas fotos, aparecerán en tu perfil.</p>
         </ion-col>
       </ng-template>
-      
-      
-
+  
     </ion-row>
   </ion-grid>
+  
 
 
 </ion-content>
