--- a/Panda-2/src/app/login/login.page.html
+++ b/Panda-2/src/app/login/login.page.html
@@ -24,6 +24,7 @@
           <ion-button expand="full" class="ion-margin" type="submit">Iniciar sesión</ion-button>
         </form>
         <ion-button expand="full" class="ion-margin" [routerLink]="['/register']">¿No tienes cuenta? Registrate</ion-button>
+        <ion-button expand="full" class="ion-margin" (click)="mostrarAlertaOlvidoContrasena()">Olvide mi contraseña</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
